<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Testing"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etFirstNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="Enter First Number"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etSecondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="Enter First Number"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnSum"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="SUM"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="Subtract"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="Divide"
        android:textSize="15sp" />

</LinearLayout>